--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -30,6 +30,7 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip setuptools wheel
         python3 -m pip install -r test/requirements.txt
+        python3 -m pip install -e git://github.com/citation-file-format/cff-converter-python.git@b2fe0441d3dca773e87097669071ed46a8886f65#egg=cffconvert
     - name: Run pytest
       run: |
         pytest --verbose -c test/pytest.ini
